<resources>
    <string name="app_name">HfTL-App</string>

    <!-- Einträge im Navigation-Drawer -->
    <string name="title_section1">News</string>
    <string name="title_section2">Meine Noten</string>
    <string name="title_section3">Mein Stundenplan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Text für den Button oben rechts -->
    <string name="action_settings">Einstellung</string>
    <string name="action_sync">Mit Kalender synchronisieren</string>

    <!-- Inhalt von der News Seite -->
    <string name="News_headline">News aus der HFT-Leipzig</string>
    <string name="noNetwork">Keine Online-Verbindung!</string>
    <string name="networkError">Fehler beim Abrufen der Daten</string>
    <string name="btn_news_refresh">Aktualisieren</string>
    <string name="list_news_empty">Keine News verfügbar!</string>

    <!-- Inhalt von der Noten Seite -->
    <string name="Noten_headline">QIS Noten Übersicht</string>

    <!-- Inhalt von der Stundenplan Seite -->
    <string name="Stundenplan_headline">QIS Wochen-Übersicht</string>
    <string name="keinStudiengang">Kein Studiengang ausgewählt!\nStudiengang jetzt auswählen?</string>

    <!--Überschrift Activitys -->
    <string name="title_activity_einstellung">Einstellung</string>
    <string name="title_activity_news_clicked">News-Detail</string>

    <string name="todo">Hier muss noch was gemacht werden</string>

    <!-- Inhalt vom Einstellungsmenü-->
    <string name="key_username">username</string>
    <string name="txt_einstell_cat_qis">HIS/QIS</string>
    <string name="txt_einstell_cat_stunden">Stundenplan</string>
    <string name="text_einstell_qis_user">Benutzername</string>
    <string name="text_einstell_qis_pw">Passwort</string>
    <string name="txt_einstell_cat_service">Noten Push-Service</string>
    <string name="txt_einstell_cat_allgemein">Allgemein</string>

    <!-- Inhalt von der Noten Seite -->
    <string name="noUsernamePassword">Benutzername/Passwort nicht eingetragen!\nDaten jetzt eintragen?</string>
    <string name="wrongUsernamePassword">Benutzername/Passwort falsch!\nDaten jetzt ändern?</string>
    <string name="title_activity_impressum">Impressum</string>

    <string name="hello_world">Hello world!</string>

</resources>