<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
            android:title="@string/txt_einstell_cat_qis">
            <EditTextPreferenceSecure
                android:key="@string/key_username"
                android:title="@string/text_einstell_qis_user"
                android:inputType="number"/>
            <EditTextPreferenceSecure
                android:key="password"
                android:title="@string/text_einstell_qis_pw"
                android:password="true"/>
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/txt_einstell_cat_stunden">
            <ListPreference
                android:title="Studiengang"
                android:summary="Bitte Studiengang auswählen"
                android:key="studiengang"
                android:entries="@array/listeStudiengang"
                android:entryValues="@array/werteStudiengang"/>
        </PreferenceCategory>
    </PreferenceScreen>
